@@ -28,9 +28,11 @@ public class Indexer {
 
     long documentsCount;
     static Logger root = (Logger) LoggerFactory.getLogger(Logger.ROOT_LOGGER_NAME);
+
     static {
         root.setLevel(Level.OFF);
     }
+
     public static void main(String[] arg) throws FileNotFoundException {
 
         Indexer obj = new Indexer();
@@ -44,8 +46,7 @@ public class Indexer {
         ArrayList<String> header;
         HashMap<Character, List<String>> stopWords = obj.constructStopWords();
 
-        int count = 20000;
-        while(count == 0) count--;
+       
         for (Map.Entry<String, Pair<Float, String>> set : htmlDocs.entrySet()) {
             docFlags = new ArrayList<>(2);
             for (int i = 0; i < 2; i++)
@@ -54,10 +55,11 @@ public class Indexer {
             title = new ArrayList<>();
             header = new ArrayList<>();
 
-            Pair<String, ArrayList<List<String>>> parsedHTML = obj.parseHTML(set.getValue().getSecond(), title, header);
+            String parsedHTML = obj.parseHTML(set.getValue().getSecond(), title, header);
 
             obj.extractFlags(docFlags, title, header);
-            Pair<List<List<String>>, List<Integer>> tokens = obj.extractWords(parsedHTML.getFirst());
+            Pair<List<List<String>>, List<Integer>> tokens = obj.extractWords(parsedHTML);
+            tokens.getFirst().get(1).add(0, title.get(0));
             mongoDB.storeTextUrl((ArrayList<String>) tokens.getFirst().get(1), set.getKey());
             obj.removeStopWords(tokens.getFirst().get(0), stopWords);
             obj.stemWord(tokens.getFirst().get(0));
@@ -71,6 +73,7 @@ public class Indexer {
 
 
     }
+
     public Indexer() {
 
         invertedFile = new HashMap<>();
@@ -79,6 +82,7 @@ public class Indexer {
     //read the stop words
     public static @NotNull HashMap<Character, List<String>> constructStopWords() throws FileNotFoundException {
         //read the file contains stop words
+
         File file = new File(".\\attaches\\stopwords.txt");
 
         Scanner scan = new Scanner(file);
@@ -101,12 +105,11 @@ public class Indexer {
         return stopWords;
     }
 
-    Pair<String, ArrayList<List<String>>> parseHTML(String HTMLText, ArrayList<String> title, ArrayList<String> header) {
-
+    String parseHTML(String HTMLText, ArrayList<String> title, ArrayList<String> header) {
 
 
         String[] toRemove = {"button", "input", "style", "script", "dfn", "span", "svg", "code", "samp", "kbd", "var", "pre"};
-        String[] toStore = {"header", "p", "div"};
+
         org.jsoup.nodes.Document parsed;
         parsed = Jsoup.parse(HTMLText);
 
@@ -115,21 +118,14 @@ public class Indexer {
         if (!parsed.getElementsByTag("main").isEmpty())
             parsed = Jsoup.parse(Objects.requireNonNull(parsed.getElementsByTag("main").first()).toString());
 
-        for(String s : toRemove)
+        for (String s : toRemove)
             parsed.select(s).remove();
-        ArrayList<List<String>> pText = new ArrayList<>();
-        pText.add(title);
-        List<String> list;
-        for(String s : toStore) {
-            list = parsed.getElementsByTag(s).eachText();
-            pText.add(list);
-        }
 
         header.addAll(parsed.getElementsByTag("header").eachText());
         header.addAll(parsed.getElementsByTag("h1").eachText());
 
 
-        return Pair.of(parsed.text(), pText);
+        return parsed.text();
     }
 
     Pair<List<List<String>>, List<Integer>> extractWords(@NotNull String text) {
@@ -148,10 +144,8 @@ public class Indexer {
             if (c <= 'z' && c >= 'a' || c <= 'Z' && c >= 'A' || c <= '9' && c >= '0' || c == '+' || c == '-') {
                 word.append(c);
                 original.append(c);
-            }
-
-            else if(c == ' '){
-                if(original.isEmpty()) continue;
+            } else if (c == ' ') {
+                if (original.isEmpty()) continue;
                 position++;
 
                 wordList.getFirst().get(1).add(original.toString());
@@ -164,8 +158,7 @@ public class Indexer {
 
                 word = new StringBuilder();
                 original = new StringBuilder();
-            }
-            else original.append(c);
+            } else original.append(c);
         }
         return wordList;
     }
@@ -176,7 +169,7 @@ public class Indexer {
         for (int i = 0; i < tokens.size(); i++) {
 
             //if ((tokens.get(i).charAt(0) - 48) >= 0 || (tokens.get(i).charAt(0) - 48) <= 9)
-            if(stopWords.get(tokens.get(i).charAt(0)) == null)
+            if (stopWords.get(tokens.get(i).charAt(0)) == null)
                 continue;
             if (stopWords.get(tokens.get(i).charAt(0)).contains(tokens.get(i).toLowerCase(Locale.ROOT)))
             //if (stopWords.contains(tokens.get(i).toLowerCase(Locale.ROOT)))
